--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <dependencies>
         <dependency>
             <groupId>org.bytedeco</groupId>
-            <artifactId>javacv</artifactId>
-            <version>0.11</version>
+            <artifactId>javacv-platform</artifactId>
+            <version>1.3.2</version>
         </dependency>
     </dependencies>
 </project>
